--- a/style.css
+++ b/style.css
@@ -30,6 +30,27 @@ body {
   align-items: center;
   overflow-x: hidden;
 }
+.notice{
+  display: inline-block;
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  animation: fadeIn linear 7s;
+
+  background: #ec0808;
+  width: 100%;
+  height:auto;
+  position: absolute;
+  top: 0px;
+}
+.noticeText {
+  color: white;
+  text-align: center;
+}
+@keyframes fadeIn {
+  0% {opacity:0;}
+  100% {opacity:1;}
+}
+
 
 .container {
   display: flex;
